--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="./landing.css">
-
+    
     <title>Login to the Microblog Network!</title>
 
     <!-- Run BEFORE page is finished loading (before window.onload - don't add the `defer` attribute): -->
@@ -49,7 +49,7 @@
             <button id="registerButton" type="submit">Register</button>
         </form>
 
-        <!-- Added a remember me button (line 52/53) -->
+        <!-- Added a remember me button (line 52/53) --------------------------------------------------------->
         <input type="checkbox" value="lsRememberMe" id="rememberMe">
         <label id="rememberMe" for="rememberMe">Remember me</label>
 
@@ -61,3 +61,18 @@
     <script src="./landing.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
