--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     </header>
 
     <main>
+<div id="logo">
+    <img src="./images/logo.png" alt="logo" width="400" height="100">
+</div>
+
+
         <div class="custom-container shadow">
             <div class="row">
                 <div class="col">
