worked on some styling

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -52,10 +52,7 @@
                     <h1>About Me</h1>
                     <div id="bio" style="background-color:beige;">
 
-                        <p id="bioText">Write a brief description about yourself here.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore
-                            exercitation ullamco laboris.</p>
+                        <p id="bioText">Write a brief description about yourself here.</p>
 
                     </div> <button id="editBioBtn" class="btn btn-primary">Edit Bio</button>
                     <!-- Add the Edit Bio button -->
