--- a/Profile/index.html
+++ b/Profile/index.html
@@ -31,9 +31,9 @@
 
     <main>
 
-        <div class="container text-center">
+   
             <h1><code>RECIPE SHARE PROFILE</code></h1>
-        </div>
+      
 
 
 
@@ -50,18 +50,15 @@
                         <input type="file" id="postImage" name="postImage">
                     </div>
                     <h1>About Me</h1>
-                    <div id="bio" style="background-color:beige;">
+                    <div id="bio" style="background-color:beige;" >
 
-                        <p id="bioText">Write a brief description about yourself here.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore
-                            exercitation ullamco laboris.</p>
+                        <p id="bioText" >Write a brief description about yourself here.</p>
 
                     </div> <button id="editBioBtn" class="btn btn-primary">Edit Bio</button>
                     <!-- Add the Edit Bio button -->
                     <div id="editBioContainer">
 
-                        <textarea id="editBioInput" class="form-control"></textarea>
+                        <textarea id="editBioInput" style="height: 150px;" class="form-control" ></textarea>
                         <button id="updateBioBtn" class="btn btn-primary">Update</button>
                     </div>
 
