added id to the buttons

--- a/Profile/index.html
+++ b/Profile/index.html
@@ -32,7 +32,7 @@
     <main>
 
    
-            <h1><code>RECIPE SHARE PROFILE</code></h1>
+            <h1 id="title"><code>RECIPE SHARE PROFILE</code></h1>
       
 
 
@@ -50,7 +50,7 @@
                         <input type="file" id="postImage" name="postImage">
                     </div>
                     <h1>About Me</h1>
-                    <div id="bio" style="background-color:beige;" >
+                    <div id="bio">
 
 
                         <p id="bioText" >Write a brief description about yourself here.</p>
@@ -70,7 +70,7 @@
                 <!-------------------------------------------create post------------------------------------>
                 <div class="col" id="postbox">
                     <h1 class="text-center">Create a Post</h1>
-                    <div class="container shadow" id="postContainer" style="background-color:beige;">
+                    <div class="container shadow" id="postContainer" >
                         <div class="row">
 
                             <h4 class="text-center">Add your post</h4>
