--- a/Profile/index.html
+++ b/Profile/index.html
@@ -44,7 +44,7 @@
                 <div class="col">
                     <!---------------------------------About me----------------------------------->
                     <h3>Profile Picture</h3>
-                    <img src="images/profileicon.jpg" alt="Profile Picture" width="200" height="200">
+                    <img src="../images/profileicon.jpg" alt="Profile Picture" width="200" height="200">
                     <div class="mb-3">
                         <label for="formFileSm" class="form-label">Upload an Image</label>
                         <input type="file" id="postImage" name="postImage">
